task-1/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: backendsvc
  namespace: development
spec:
  type: ClusterIP
  selector:
    app: backend
  ports:
    - name: backend
      port: 80
      protocol: TCP
      targetPort: 80

---
apiVersion: v1
kind: Service
metadata:
  namespace: development
  name: frontendsvc
spec:
  type: ClusterIP
  selector:
    app: frontend
  ports:
    - name: frontend
      port: 80
      protocol: TCP
      targetPort: 80
---
apiVersion: v1
kind: Service
metadata:
  namespace: development
  name: mysqlsvc
spec:
  type: ClusterIP
  selector:
    app: mysql
  ports:
    - name: frontend
      port: 3306
      protocol: TCP
      targetPort: 3306
